--- a/translations/login.fr.xlf
+++ b/translations/login.fr.xlf
@@ -253,7 +253,7 @@
         <target>Mot de passe</target>
       </segment>
     </unit>
-    <unit id="MI8TC0R" name="34a3970">
+    <unit id="MI8TC0R">
       <notes>
         <note category="german">Um die Registrierung abzuschließen und deinen Account zu aktivieren, musst du auf einen
                         Aktivierungslink klicken, der dir an die angegebene E-Mail Adresse geschickt wird.</note>
@@ -309,7 +309,7 @@
         <target><![CDATA[Votre pseudo ne peut pas contenir d'espaces ou les symboles "$", "<" et ">".]]></target>
       </segment>
     </unit>
-    <unit id="U4wx4AP" name="13f0f8d">
+    <unit id="U4wx4AP">
       <notes>
         <note category="german">Auf wiedersehen, %name%. Wir werden dich vermissen und hoffen, dass du vielleicht doch noch einmal zurück kommst.</note>
       </notes>
@@ -336,7 +336,7 @@
         <target>J'ai lu et accepte la politique de confidentialité</target>
       </segment>
     </unit>
-    <unit id="ZJtAei3" name="f062e66">
+    <unit id="ZJtAei3">
       <notes>
         <note category="german">Dein Passwort wurde erfolgreich geändert. Bitte logge dich mit deinem neuen Passwort ein.</note>
       </notes>
@@ -390,7 +390,7 @@
         <target>Mot de passe oublié?</target>
       </segment>
     </unit>
-    <unit id="axBQZ1o" name="d8a5e1e">
+    <unit id="axBQZ1o">
       <notes>
         <note category="german">Wenn deine eingegebene E-Mail Adresse korrekt war, wurde dir soeben ein Link zum Zurücksetzen deines Passwortes geschickt.</note>
       </notes>
@@ -399,7 +399,7 @@
         <target>Si l'adresse e-mail saisie est correcte, un lien de réinitialisation vous a été envoyé.</target>
       </segment>
     </unit>
-    <unit id="w6NXTHc" name="0e5133b">
+    <unit id="w6NXTHc">
       <notes>
         <note category="german">Dein Passwort wurde geändert. Du kannst dich nun mit deinem neuen Passwort einloggen.</note>
       </notes>
@@ -435,7 +435,7 @@
         <target>Erreur de transfert de données.</target>
       </segment>
     </unit>
-    <unit id="wPXsZnE" name="6842e2e">
+    <unit id="wPXsZnE">
       <notes>
         <note category="german">MyHordes ist ein Teil des EternalTwin-Netzwerks. Wenn du einen EternalTwin-Account hast, kannst du MyHordes ohne zusätzliche Registrierung spielen!</note>
       </notes>
@@ -453,7 +453,7 @@
         <target>Connectez-vous via EternalTwin</target>
       </segment>
     </unit>
-    <unit id="LiGRhEI" name="9a73574">
+    <unit id="LiGRhEI">
       <notes>
         <note category="german">Wenn du noch einen alten MyHordes-Account hast, kannst du dich vorerst auch damit einloggen.</note>
       </notes>
@@ -462,7 +462,7 @@
         <target>Si vous avez encore un ancien compte MyHordes, vous pouvez l'utiliser pour vous connecter pour le moment.</target>
       </segment>
     </unit>
-    <unit id="ho.WxzI" name="6471614">
+    <unit id="ho.WxzI">
       <notes>
         <note category="german">Dies wird nicht für immer möglich sein. Wir raten dir, deinen alten MyHordes-Account so bald wie möglich mit EternalTwin zu verknüpfen.</note>
       </notes>
@@ -471,7 +471,7 @@
         <target>Cela ne sera pas possible pour toujours. Nous vous conseillons de lier votre ancien compte MyHordes à EternalTwin dès que possible.</target>
       </segment>
     </unit>
-    <unit id="uT6i9yH" name="bb99aa1">
+    <unit id="uT6i9yH">
       <notes>
         <note category="german">Deine Seele bleibt bei der Verknüpfung mit EternalTwin selbstverständlich vollständig erhalten.</note>
       </notes>
@@ -507,7 +507,7 @@
         <target>Nous pouvons commencer tout de suite !</target>
       </segment>
     </unit>
-    <unit id="NYi.sD7" name="1ba0830">
+    <unit id="NYi.sD7">
       <notes>
         <note category="german">Dank deines EternalTwin-Account kannst du ohne vorherige Registrierung MyHordes spielen!</note>
       </notes>
@@ -516,7 +516,7 @@
         <target>Grâce à votre compte EternalTwin, vous pouvez jouer à MyHordes sans inscription préalable !</target>
       </segment>
     </unit>
-    <unit id="zK1Sfzm" name="696390f">
+    <unit id="zK1Sfzm">
       <notes>
         <note category="german">&lt;strong&gt;Achtung:&lt;/strong&gt; Du hast bereits einen MyHordes-Account? Dann solltest du jetzt
                                     &lt;i&gt;abbrechen&lt;/i&gt; und dich zuerst mit deinem alten MyHordes-Account einloggen. Du kannst deinen
@@ -565,7 +565,7 @@
         <target>Vous serez connecté. Veuillez patienter une seconde...</target>
       </segment>
     </unit>
-    <unit id="pEAthLZ" name="d621208">
+    <unit id="pEAthLZ">
       <notes>
         <note category="german">Vielen Dank, dass du deinen MyHordes-Account %namecheck_mh% mit deinem EternalTwin-Account %namecheck_et% verknüpfst!</note>
       </notes>
@@ -574,7 +574,7 @@
         <target>Merci d'avoir associé votre compte MyHordes %namecheck_mh% à votre compte Eternal-Twin %namecheck_et% !</target>
       </segment>
     </unit>
-    <unit id="7JD3pLt" name="7505c04">
+    <unit id="7JD3pLt">
       <notes>
         <note category="german">Nach der Verknüpfung kannst du dich nur noch über EternalTwin in MyHordes anmelden. Deine alten Zugangsdaten werden ungültig.</note>
       </notes>
@@ -583,7 +583,7 @@
         <target>Après le lien, vous ne pouvez vous connecter à MyHordes que via EternalTwin. Vos anciennes données d'accès seront invalides.</target>
       </segment>
     </unit>
-    <unit id="r.jGoXw" name="d65799d">
+    <unit id="r.jGoXw">
       <notes>
         <note category="german">Wenn du fortfahren möchtest, gib bitte ein letztes Mal dein MyHordes-Passwort ein und klicke auf "Verknüpfen".</note>
       </notes>
@@ -610,7 +610,7 @@
         <target>Nous saluons votre retour ! Votre compte n'est plus marqué pour suppression.</target>
       </segment>
     </unit>
-    <unit id="n69_UZl" name="0a8ad23">
+    <unit id="n69_UZl">
       <notes>
         <note category="german">Es haben sich zu viele Nutzer aus deinem Netzwerk heraus bei MyHordes registriert. Weitere Registrierungen aus deinem Netzwerk sind für eine Weile nicht mehr möglich.</note>
       </notes>
@@ -637,7 +637,7 @@
         <target>Le pseudo ne doit contenir que des caractères alphanumériques.</target>
       </segment>
     </unit>
-    <unit id="6zAO87a" name="b17853d">
+    <unit id="6zAO87a">
       <notes>
         <note category="german">Der eingegebene Pate ist ungültig. Um dich ohne einen Paten anzumelden, lasse das Feld frei.</note>
       </notes>
@@ -655,7 +655,7 @@
         <target>Pate</target>
       </segment>
     </unit>
-    <unit id="X.GbWI5" name="cd8dcfe">
+    <unit id="X.GbWI5">
       <notes>
         <note category="german">Wenn du von einem anderen Spieler für MyHordes geworben wurdest, gib hier seinen Namen ein. Er oder sie wird dir sehr dankbar sein...</note>
       </notes>
