--- a/translations/mail.fr.xlf
+++ b/translations/mail.fr.xlf
@@ -37,7 +37,7 @@
         <target>Pour terminer votre inscription, vous avez besoin du code de validation suivant:</target>
       </segment>
     </unit>
-    <unit id="AevPeyo" name="365f8ca">
+    <unit id="AevPeyo">
       <notes>
         <note category="german">Du erhälst diese Mail, da du (oder jemand anderes) deine E-Mail Adresse bei der Registrierung angegeben hat.
         Wenn du dich nicht bei MyHordes registriert hast, ignoriere diese Nachricht.</note>
@@ -67,7 +67,7 @@
         <target>Pour réinitialiser votre mot de passe, veuillez visiter le lien suivant :</target>
       </segment>
     </unit>
-    <unit id="WdF_yfy" name="6d2f95b">
+    <unit id="WdF_yfy">
       <notes>
         <note category="german">Du erhälst diese Mail, da du (oder jemand anderes) deine E-Mail Adresse in die Passwort-Zurücksetzen-Funktion eingegeben hat.
         Wenn du dein Passwort nicht zurücksetzen willst, ignoriere diese E-Mail. Dein altes Passwort bleibt weiterhin gültig, wenn du es nicht
