--- a/translations/security.fr.xlf
+++ b/translations/security.fr.xlf
@@ -154,5 +154,23 @@
         <target>Lien de connexion invalide ou expiré.</target>
       </segment>
     </unit>
+    <unit id="9qGC3hG" name="Too many failed login attempts, please try again in %minutes% minute.">
+      <notes>
+        <note category="german">Too many failed login attempts, please try again in %minutes% minute.</note>
+      </notes>
+      <segment>
+        <source>Too many failed login attempts, please try again in %minutes% minute.</source>
+        <target>Plusieurs tentatives de connexion ont échoué, veuillez réessayer dans %minutes% minute.</target>
+      </segment>
+    </unit>
+    <unit id="AJR3lMs" name="Too many failed login attempts, please try again in %minutes% minutes.">
+      <notes>
+        <note category="german">Too many failed login attempts, please try again in %minutes% minutes.</note>
+      </notes>
+      <segment>
+        <source>Too many failed login attempts, please try again in %minutes% minutes.</source>
+        <target>Plusieurs tentatives de connexion ont échoué, veuillez réessayer dans %minutes% minutes.</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
